Fix HTML entity encoding in default values

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -173,9 +173,9 @@
     }
 
     function setDefaultValues() {
-        document.getElementById("userId").value = "[[${usernamePrefix}]]";
-        document.getElementById("urlPrefix").value = "[[${deeplinkPrefix}]]";
-        document.getElementById("expiration").value = "[[${expiration}]]";
+        document.getElementById("userId").value = "[(${usernamePrefix})]";
+        document.getElementById("urlPrefix").value = "[(${deeplinkPrefix})]";
+        document.getElementById("expiration").value = "[(${expiration})]";
     }
 
     function setTheme(theme) {
